support/global/src/main/kotlin/com/example/mindshare/error/exception/JwtExpiredException.kt
package com.example.mindshare.error.exception

import com.example.mindshare.ErrorCode

class JwtExpiredException(
    val errorCode: ErrorCode,
    val data: Any? = null,
) : RuntimeException(errorCode.message)
